hphp/hack/test/typecheck/switch_change_type2.php.exp
File "switch_change_type2.php", line 22, characters 14-15:
Invalid argument (Typing[4110])
File "switch_change_type2.php", line 12, characters 12-14:
Expected int
File "switch_change_type2.php", line 12, characters 21-24:
But got bool
